ontol/ontol-compiler/test-cases/error/rel/store_key.on
def foo (
    rel .'id'|id: (rel .is: text)
    rel .store_key: 303 // ERROR type mismatch: expected text constant, found `ontol.int(303)`
)
